RESOLVED FIXED296944
[ macOS Release ] imported/w3c/web-platform-tests/html/dom/idlharness.worker.html is a flakey text failure
https://bugs.webkit.org/show_bug.cgi?id=296944
Summary [ macOS Release ] imported/w3c/web-platform-tests/html/dom/idlharness.worker....
Bryan Medina
Reported 2025-08-05 11:56:03 PDT
imported/w3c/web-platform-tests/html/dom/idlharness.worker.html is a flakey failure on macOS wk2 Release. HISTORY: https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fhtml%2Fdom%2Fidlharness.worker.html TEXT DIFF: --- /Volumes/Data/worker/Apple-Sequoia-Release-AppleSilicon-WK2-Tests/build/layout-test-results/imported/w3c/web-platform-tests/html/dom/idlharness.worker-expected.txt +++ /Volumes/Data/worker/Apple-Sequoia-Release-AppleSilicon-WK2-Tests/build/layout-test-results/imported/w3c/web-platform-tests/html/dom/idlharness.worker-actual.txt @@ -1,4 +1,3 @@ -Blocked access to external URL http://invalid/ PASS idl_test setup PASS idl_test validation TEXT DIFF URL: https://build.webkit.org/results/Apple-Sequoia-Release-AppleSilicon-WK2-Tests/298225%40main%20(3992)/imported/w3c/web-platform-tests/html/dom/idlharness.worker-diff.txt
Attachments
Radar WebKit Bug Importer
Comment 1 2025-08-05 11:56:21 PDT
Bryan Medina
Comment 2 2025-08-05 12:55:47 PDT
I was able to reproduce the text failure locally on my device running macOS Sequoia Release ToT on arm64 using the following command: run-webkit-tests imported/w3c/web-platform-tests/html/dom/idlharness.worker.html --iterations=10 -f
Bryan Medina
Comment 3 2025-08-05 13:08:47 PDT
This text failure is also occurring on wk1, not just wk2.
EWS
Comment 4 2025-08-05 13:22:08 PDT
Test gardening commit 298254@main (0258dd90573a): <https://commits.webkit.org/298254@main> Reviewed commits have been landed. Closing PR #48968 and removing active labels.
Chris Dumez
Comment 5 2025-09-03 21:41:03 PDT
EWS
Comment 6 2025-09-04 16:17:55 PDT
Committed 299586@main (2cbeef00e398): <https://commits.webkit.org/299586@main> Reviewed commits have been landed. Closing PR #50283 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.